--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,8 @@
 $space-large: 2.5rem;
-$color-purple: purple;
+$title-color: #555;
 
 .page-title {
-  color: $color-purple;
+  color: $title-color;
   margin-top: $space-large;
   margin-bottom: $space-large;
 }
